[gd_scene load_steps=9 format=2]

[ext_resource path="res://Source/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Font/NotoSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 200
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 395.0
margin_bottom = 8.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 170.0
size_flags_vertical = 3

[node name="Play" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 901.0
margin_top = 54.0
margin_right = 1018.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
text = "Jogar"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 1920.0
margin_bottom = 344.0
size_flags_vertical = 3

[node name="Options" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 880.0
margin_top = 54.0
margin_right = 1039.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "Opções"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1920.0
margin_bottom = 518.0
size_flags_vertical = 3

[node name="Credits" type="Button" parent="VBoxContainer/CenterContainer3"]
margin_left = 871.0
margin_top = 54.0
margin_right = 1049.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "Créditos"

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 522.0
margin_right = 1920.0
margin_bottom = 693.0
size_flags_vertical = 3

[node name="Exit" type="Button" parent="VBoxContainer/CenterContainer4"]
margin_left = 916.0
margin_top = 55.0
margin_right = 1004.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 4 )
text = "Sair"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = -148.0
margin_right = 1928.0
margin_bottom = 481.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[wave] [center] PHYSICS ACE"
text = "  PHYSICS ACE"

[connection signal="pressed" from="VBoxContainer/CenterContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer4/Exit" to="." method="_on_Exit_pressed"]
